--- a/shopping.html
+++ b/shopping.html
@@ -42,7 +42,7 @@
     </div>
   </header>
   <div class="container">
-    <h2 class="title">Discover the Best Food</h2>
+    <h2 class="title">Discover the Best Food In The World</h2>
     <div class="shop-content">
 
 
